cluster/apps/networking/envoy/config/gateway-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostnames in.${XYZ_DOMAIN},in.${TGR_DOMAIN},in.${LILJ_DOMAIN},in.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostnames
      metallb.io/loadBalancerIPs: "${LB_V4_CLUSTER_GATEWAY}, ${LB_V6_CLUSTER_GATEWAY}"
      metallb.io/allow-shared-ip: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "tls.${XYZ_DOMAIN/./-}"
